# wowkmang

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: _build-image.yaml  build.yaml  checks.yaml  images.yaml  update-claude-code.yml
example/projects/: myptoject.yaml
http/: http-client.env.json  http.http
images/base/: Dockerfile
images/python/: Dockerfile
scripts/: update-claude-version.sh
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_docker_runner.py  test_github_client.py  test_hooks.py  test_logging.py  test_models.py  test_queue.py  test_repo_cache.py  test_summary.py  test_worker.py
tests/api/: test_auth.py  test_config.py  test_logging.py  test_routes.py
tests/executor/: test_docker_runner.py  test_github_client.py  test_hooks.py  test_prompts.py  test_repo_cache.py  test_result_file.py  test_summary.py  test_worker.py
tests/taskqueue/: test_models.py  test_queue.py
wowkmang/: __init__.py  api.py  auth.py  config.py  docker_runner.py  github_client.py  hooks.py  models.py  queue.py  repo_cache.py  summary.py  task_queue.py  worker.py
wowkmang/api/: auth.py  config.py  routes.py
wowkmang/executor/: docker_runner.py  github_client.py  hooks.py  prompts.py  repo_cache.py  result_file.py  summary.py  worker.py
wowkmang/taskqueue/: models.py  task_queue.py
